--- a/JS/formtagattribute.html
+++ b/JS/formtagattribute.html
@@ -9,7 +9,7 @@
 
 <body action="thankyou.html">
     <p>this is form tag attribute</p>
-    <button type="submit">submit</button>
+    <button type="submit">submit button</button>
 
 </body>
 
