--- a/JS/validUserName.html
+++ b/JS/validUserName.html
@@ -5,27 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        function sub() {
-            var nameRequird = /^([^0-9\W]*)$/;
-            if (nameRequird.test(document.getElementById("id1")).textContent = "user is valid";
-            }
-            else {
-                document.getElementById("id1").textContent = "user is invalid";
-            }
 
-        }
-        document.
-    </script>
 </head>
 
 <body>
+    <p id="id11">
+    </p>
     <form name="myform">
         <label>Name</label>
-        <input type="text"> <br><br>
-        <small id="id1"></small>
+        <input type="text" id="id2" name="fName"> <br><br>
 
-        <button type="submit" onclick="sub();" id="submitbtn">Submit</button>
+        <input type="submit" value="Submit" name="submit" onclick="dis()">
+        <script>
+            function dis() {
+                var firstname = document.form["myform"]["fName"].value;
+                var regx = /^([^0-9\W]*)$/
+                if (regx.test(firstname) === true) {
+                    document.getElementById("id11").innerHTML = "valid name";
+                    return true;
+
+                } else {
+                    alert("invalid user name")
+                    return false;
+                }
+            }
+        </script>
     </form>
 </body>
 
