change line added id

--- a/JS/formvalidation.html
+++ b/JS/formvalidation.html
@@ -1,35 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>form validation</title>
 </head>
 
 <body>
-    <p id="id11"></p>
-    <form name="myform" onsubmit="dis()">
-        <label>Name</label>
-        <input type="text" id="id2" name="inputtype"> <br><br>
+    <form name="form1">
+        <label>FirstName</label>
+        <input type="text" name="username" id="fName"> <br><br>
 
-        <input type="submit" value="Submit" name="submit">
+        <label>LastName</label>
+        <input type="text" name="usersirname"> <br><br>
+
+        <label>Password</label>
+        <input type="text" name="userpassword"> <br><br>
+
+        <input type="submit" value="Submit" onclick="dis();">
+        <p id="para"></p>
+
     </form>
     <script>
         function dis() {
-            var firstname = document.form["myform"]["inputtype"].value;
-            var regx = /^([A-Za-z]*)$/
-            if (regx.test(firstname) === true) {
-                document.getElementById("id11").innerHTML = "valid user name";
-
-            } else {
-                alert("invalid user name")
-
-            }
+            var FirstName = document.getElementById("fName").value
+            var regx
         }
     </script>
-
 </body>
 
 </html>
