--- a/JS/assiformvalidation.html
+++ b/JS/assiformvalidation.html
@@ -36,11 +36,11 @@
                 var b = document.getElementById("lname").value;
                 if (regx.test(b) === true)
                     alert("Last Name is valid")
-                else {
+                else
                     alert("Last Name is invalid")
-                }
-
             }
+
+        }
     </script>
 
 </body>
