added svg tag line

--- a/JS/metatag.html
+++ b/JS/metatag.html
@@ -11,29 +11,67 @@
 </head>
 
 <body>
-    <meter min="0" max="100" value="30"></meter><br>
-    <meter min="0" max="100" value="60"></meter><br>
-    <meter min="0" max="100" value="70"></meter><br>
-    <meter min="0" max="100" value="25"></meter><br>
-    <meter min="0" max="100" value="75"></meter><br>
-    <meter min="0" max="100" value="40"></meter><br>
-    <meter min="0" max="100" value="20"></meter><br>
-    <meter min="0" max="100" value="80"></meter><br>
-    <meter min="0" max="100" value="45"></meter><br>
-    <meter min="0" max="100" value="50"></meter><br>
-    <meter min="0" max="100" value="95"></meter><br>
-    <meter min="0" max="100" value="70"></meter><br>
-    <meter min="0" max="100" value="55"></meter><br>
-    <meter min="0" max="100" value="75"></meter><br>
-    <meter min="0" max="100" value="90"></meter><br>
-    <meter min="0" max="100" value="20"></meter><br>
-    <meter min="0" max="100" value="30"></meter><br>
-    <meter min="0" max="100" value="40"></meter><br>
-    <!-- <meta name="decribtion" content="html tutorial">
-    <meta name="keyword" content="tag,css">
-    <meta name="author" content="rushi divate">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0 "> -->
+    <h2>Tempture Of Cities</h2>
+    <meter min="0" max="100" value="30"></meter>Pune<br>
+    <meter min="0" max="100" value="60"></meter>Mumbai<br>
+    <meter min="0" max="100" value="70"></meter>Bangalor<br>
+    <meter min="0" max="100" value="25"></meter>Sangamner<br>
+    <meter min="0" max="100" value="75"></meter>Nashik<br>
+    <meter min="0" max="100" value="40"></meter>Samnapur<br>
+    <meter min="0" max="100" value="20"></meter>Ashwi<br>
+    <meter min="0" max="100" value="80"></meter>Naranyangaon<br>
+    <meter min="0" max="100" value="45"></meter> Vadgaon<br>
+    <meter min="0" max="100" value="50"></meter>Shrirampur<br>
+    <meter min="0" max="100" value="95"></meter>Khed<br>
+    <meter min="0" max="100" value="70"></meter>Maldad<br>
+    <meter min="0" max="100" value="55"></meter>Chitali<br>
+    <meter min="0" max="100" value="75"></meter>Panodi<br>
+    <meter min="0" max="100" value="90"></meter>Kalyan<br>
+    <meter min="0" max="100" value="20"></meter>Mulshi<br>
+    <meter min="0" max="100" value="30"></meter>Sangali<br>
+    <meter min="0" max="100" value="40"></meter>Vishakapattnam<br><br>
 
+
+    <label>Downloading PUBG</label>
+    <progress max="100" value="70"></progress>
+
+    <select>
+        <optgroup>
+         
+            <option>HP I3</option>
+            <option>HP I5</option>
+            <option>HP I7</option>
+            <option>HP I8</option>
+            <option>HP I5</option>
+        </optgroup>
+
+        <optgroup>
+            <option><mark>DELL I3</mark> </option>
+            <option>DELL I4</option>
+            <option>DELL I5</option>
+            <option>DELL I5</option>
+        </optgroup>
+
+        </select>
+    <nav style="background-color: orange; font-family: 'Times New Roman', Times, serif;">
+
+        <a href="#">Home</a>|
+        <a href="#">Furniture</a>|
+        <a href="#">Kitchen</a>|
+        <a href="#">grossary</a>
+    </nav>
+    <!-- <svg style="border: solid red;" height="100px" width="100px">
+        <circle cx="50px" cy="50px" r="30" stroke="black" fill="green" stroke-width="30px"/>
+    </svg> -->
+    <svg style="border:solid red">
+        <rect x="0" y="0" stroke="black" stroke-width="5px" dominate-baseline="middle" fill="green" width="300px" height="100px">
+    </svg>
+
+    <a href="http://www.google.com"><img src="submit.png" height="100px" width="100px"> </a>
+    <ruby>-this is rd
+    <rp><rt>www.rushidivate.com</rt>rushi divate</rp>
+
+</ruby>
 
 </body>
 
