--- a/JS/JSdatatypes.html
+++ b/JS/JSdatatypes.html
@@ -10,10 +10,9 @@
             var a = document.getElementById("input").value;
             if (a >= 45 && a <= 60) {
                 document.getElementById("id1").innerHTML = "Second Class"
-
             } else if (a >= 60 && a <= 70) {
                 document.getElementById("id2").innerHTML = "First Class"
-            } else if (a >= 70 && a <= 90) {
+            } else if (a >= 70 && a <= 100) {
                 document.getElementById("id3").innerHTML = "Distingstion"
             } else {
                 document.getElementById("id4").innerHTML = "Error"
@@ -24,22 +23,30 @@
     <style>
         .student {
             color: green;
+            background-color: skyblue;
         }
+        
+        #id10 {}
     </style>
 </head>
 
 <body>
-    <form>
-        <h1 class="student">Student Passing Category</h1>
-        <Label>Student Mark's</Label>
-        <input type="text" id="input">
+    <form id="id10">
+        <div class="div">
+            <h1 class="student">Student Passing Category</h1>
+            <Label>Student Mark's</Label>
+            <input type="text" id="input">
 
-        <p id="myPara"></p>
-        <p id="id1"></p>
-        <p id="id2"></p>
-        <p id="id3"></p>
-        <p id="id4"></p>
-        <input type="reset"><br>
+            <p id="myPara"></p>
+            <p id="id1"></p>
+            <p id="id2"></p>
+            <p id="id3"></p>
+            <p id="id4"></p>
+            <input type="reset"><br>
+
+
+        </div>
+
 
     </form>
     <button onclick="displayMarks()">Total Marks</button>
