--- a/CSS/hover.html
+++ b/CSS/hover.html
@@ -27,6 +27,15 @@
             color: royalblue;
             text-decoration: none;
         }
+        
+        body {
+            counter-reset: rushi;
+        }
+        
+        h1 {
+            counter-increment: rushi;
+            content:
+        }
     </style>
     <title>Document</title>
 </head>
@@ -36,6 +45,10 @@
     <a href="#">Google!</a> <br><br>
     <a href="#">FaceBook!</a> <br><br>
     <a href="#">Instagram!</a> <br><br>
+    <p>body tag</p>
+    <p>table tag</p>
+    <p>meta tag</p>
+    <p>datalist tag</p>
 </body>
 
 </html>
