added some line

--- a/CSS/CssAnimation.html
+++ b/CSS/CssAnimation.html
@@ -38,6 +38,14 @@
                 background-image: green;
             }
         }
+        
+        h1::after {
+            content: "this is brand"
+        }
+        
+        h1::before {
+            content: "this is 2nd brand"
+        }
     </style>
 </head>
 
@@ -45,6 +53,7 @@
     <div>
         Front End Devlopment
     </div>
+    <h1>Rushi Divate</h1>
 </body>
 
 </html>
