checking before after property

--- a/CSS/BeforeanAfter.html
+++ b/CSS/BeforeanAfter.html
@@ -7,17 +7,15 @@
     <title>Document</title>
     <style>
         p::after {
-            content: " Rushi Divate Welcome to front end";
+            content: " welcome bro";
         }
         
-        P::before {
-            content: "HTML ";
+        p::before {
+            content: " Front End Devloper ";
         }
         
         li::before {
             content: url(Diwali.jpg);
-            height: 10px;
-            width: 10px;
         }
     </style>
 </head>
