--- a/Bootstrap 4.0/BasicBtn.html
+++ b/Bootstrap 4.0/BasicBtn.html
@@ -7,14 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
-        /* #id1 {
-            background-color: dodgerblue;
-        }
-        
-        input[type="button"] {
-            background-color: green;
-            color: white;
-        } */
+
     </style>
 </head>
 
@@ -39,7 +32,20 @@
         <input type="button" value="link" class="btn btn-link btn btn-sm">
         <input type="button" value="Primary" class="btn btn-primary btn btn-md">
         <input type="button" value="warning" class="btn btn-warning">
+
+
     </div>
+
+    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
+        add one idea at a time to your broader argument.</p>
+
+
+    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
+        add one idea at a time to your broader argument.</p>
+
+    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
+        add one idea at a time to your broader argument.</p>
+
 </body>
 
 </html>
