--- a/Bootstrap 4.0/BasicBtn.html
+++ b/Bootstrap 4.0/BasicBtn.html
@@ -2,49 +2,26 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
 
     </style>
 </head>
 
 <body>
-    <input type="button" value="success" class="btn btn-success">
-    <input type="button" value="Danger" class="btn btn-danger">
-    <input type="button" value="link" class="btn btn-link">
-    <input type="button" value="Primary" class="btn btn-primary">
-    <input type="button" value="warning" class="btn btn-warning">
-
-    <div class="btn btn-group-verticle" id="id1">
-        <input type="button" value="success" class="btn btn-success">
-        <input type="button" value="Danger" class="btn btn-danger">
-        <input type="button" value="link" class="btn btn-link">
-        <input type="button" value="Primary" class="btn btn-primary">
-        <input type="button" value="warning" class="btn btn-warning">
+    <button type="submit" class="btn btn-danger">Danger</button>
+    <button type="submit" class="btn btn-success">Sucess</button>
+    <button type="submit" class="btn btn-warning">Warning</button>
+    <button type="submit" class="btn btn-link">Link</button>
+    <button type="submit" class="btn btn-primary">Primary</button>
+    <div class="btn btn-group">
+        <button type="submit" class="btn btn-success ">Home</button>
+        <button type="submit" class="btn btn-success">Furniture</button>
+        <button type="submit" class="btn btn-success">Contact</button>
     </div>
-
-    <div class="btn-group-verticle" id="id1">
-        <input type="button" value="success" class="btn btn-success btn btn-lg disable">
-        <input type="button" value="Danger" class="btn btn-danger btn btn-xm">
-        <input type="button" value="link" class="btn btn-link btn btn-sm">
-        <input type="button" value="Primary" class="btn btn-primary btn btn-md">
-        <input type="button" value="warning" class="btn btn-warning">
-
-
-    </div>
-
-    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
-        add one idea at a time to your broader argument.</p>
-
-
-    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
-        add one idea at a time to your broader argument.</p>
-
-    <p>A paragraph is a series of related sentences developing a central idea, called the topic. Try to think about paragraphs in terms of thematic unity: a paragraph is a sentence or a group of sentences that supports one central, unified idea. Paragraphs
-        add one idea at a time to your broader argument.</p>
 
 </body>
 
