--- a/CSS/Cssgrid.html
+++ b/CSS/Cssgrid.html
@@ -17,7 +17,7 @@
         <div class="div1">div1 </div>
         <div class="div2">div2 </div>
         <div class="div3">div3</div>
-        <div class="div4">div4 please suscribe my channel its easy oprate</div>
+        <div class="div4">div4 please suscribe my channel its easy oprateo</div>
         <div class="div5">div5</div>
         <div class="div6">div6</div>
         <div class="div7" style="background-color: black; color: blanchedalmond;">div7</div>
