--- a/JS/appendMethod.html
+++ b/JS/appendMethod.html
@@ -18,6 +18,9 @@
         document.body.append(p)
         div.appendChild(p)
         p.innerHTML = "hello paragraph"
+        var d = document.createElement("p")
+        document.body.append(div)
+        p.innerHTML = "hello rd"
     </script>
 </body>
 
