--- a/JS/appendMethod.html
+++ b/JS/appendMethod.html
@@ -21,6 +21,10 @@
         var d = document.createElement("p")
         document.body.append(div)
         p.innerHTML = "hello rd"
+        var z = document.createElement("p")
+        p.innerHTML = "hello rushi"
+        var q = document.createElement("p")
+        p.innerHTML = "hello rushi"
     </script>
 </body>
 
