added some line

--- a/JS/arr.Html
+++ b/JS/arr.Html
@@ -10,35 +10,56 @@
 
 <body>
     <script>
-        var arrayOne = [30, 40, 33, 55, 66, 55]
-        sum = 0;
-        document.write("<ul>")
-        for (a = 0; a < 6; a++) {
-            document.write("<li>")
-            sum = sum + arrayOne[a]
-            document.write(arrayOne[a] + "<br>")
-            document.write("</li>")
-        }
-        document.write("Total=" + sum)
-        document.write("</ul>")
+        // var arrayOne = [30, 40, 33, 55, 66, 55]
+        // sum = 0;
+        // document.write("<ul>")
+        // for (a = 0; a < 6; a++) {
+        //     document.write("<li>")
+        //     sum = sum + arrayOne[a]
+        //     document.write(arrayOne[a] + "<br>")
+        //     document.write("</li>")
+        // }
+        // document.write("Total=" + sum)
+        // document.write("</ul>")
 
 
         //new method of array
-        var arr = new Array();
-        arr[0] = 20;
-        arr[3] = "sanket";
-        arr[4] = "shubham";
-        // arr[3] = 300;
-        // arr[4] = 200;
-        for (g = 0; g <= 5; g++) {
-            arr[g] = prompt("enter the value")
+        // var arr = new Array();
+        // arr[0] = 20;
+        // arr[3] = "sanket";
+        // arr[4] = "shubham";
+        // // arr[3] = 300;
+        // // arr[4] = 200;
+        // for (g = 0; g <= 5; g++) {
+        //     arr[g] = prompt("enter the value")
+
+        // }
+        // document.write("<ul>")
+        // for (a = 0; a < 6; a++) {
+        //     document.write("<li>" + arr[a] + "</li>")
+        // }
+        // document.write("</ul>")
+
+
+        // var rushi = new Array();
+
+        // for (var g = 0; g <= 5; g++) {
+        //     rushi[g] = prompt("enter the value");
+        // }
+        // for (var a = 0; a <= 5; a++) {
+        //     document.write(rushi[a] + "<br>");
+        // }
+
+
+        var addData = new Array()
+        for (a = 0; a <= 10; a++) {
+            addData[a] = prompt("enter the value")
 
         }
-        document.write("<ul>")
-        for (a = 0; a < 6; a++) {
-            document.write("<li>" + arr[a] + "</li>")
+        for (g = 0; g <= 10; g++) {
+            document.write(addData[g] + "<br>")
+
         }
-        document.write("</ul>")
     </script>
 </body>
 
