--- a/JS/objectRevision.html
+++ b/JS/objectRevision.html
@@ -49,7 +49,13 @@
         addData.address = 'sangamner'
         addData.age = 21
         addData.qualification = 'bca'
-        document.write(addData.firstName)
+        document.write(addData.firstName + "<br>")
+
+        var newData = new Object()
+            // person information
+        newData.firstName = 'rushi'
+        newData.lastName = 'divate'
+        document.write(newData.firstName)
     </script>
 </body>
 
