added some line

--- a/JS/arrayObject.html
+++ b/JS/arrayObject.html
@@ -132,7 +132,7 @@
             Age: 21,
             education: 'bca'
         }
-        for (var key in forLoop)
+        for (var key in forLoop) //this is the syntax
             document.write(key + ":" + forLoop[key] + "<br>")
 
         var showData = {
